add : app - presentation - domain - data 멀티 모듈 구조로 변경
- presentation, domain, data 각각의 레이어를 모듈로 분리해서 관리
- 의존성 방향 : presentation -> domain <- data

--- a/app/src/main/res/layout/item_vod.xml
+++ b/app/src/main/res/layout/item_vod.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="data"
-            type="com.example.baseandroidapp.core.presentation.VodView" />
+            type="com.example.presentation.view.VodView" />
     </data>
 
     <LinearLayout
