--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/home"
+        android:id="@+id/home_graph"
         android:icon="@drawable/ic_launcher_background"
         android:title="home"/>
+
+
+    <item
+        android:id="@+id/list_graph"
+        android:icon="@drawable/ic_launcher_background"
+        android:title="list"/>
+
+
+    <item
+        android:id="@+id/profile_graph"
+        android:icon="@drawable/ic_launcher_background"
+        android:title="menu"/>
 
 </menu>
