--- a/app/src/main/res/layout/activity_vod_detail.xml
+++ b/app/src/main/res/layout/activity_vod_detail.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- data binding -->
+<!--<layout>-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -39,3 +42,4 @@
     </LinearLayout>
 
 </LinearLayout>
+<!--</layout>-->
