add : base 모듈 추가 및 메인 액티비티 생성

--- a/app/src/main/res/layout/item_vod.xml
+++ b/app/src/main/res/layout/item_vod.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="data"
-            type="com.example.presentation.view.VodView" />
+            type="com.example.baseandroidapp.vod.VodView" />
     </data>
 
     <LinearLayout
