--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    android:paddingHorizontal="4dp"
     android:orientation="horizontal">
 
     <TextView
@@ -18,7 +20,7 @@
         style="@style/ScheduleItemTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:paddingStart="4dp"
         android:text="6-2" />
 
 </LinearLayout>
