--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -156,6 +156,12 @@
             </HorizontalScrollView>
 
 
+            <Button
+                android:id="@+id/btn_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="setting"/>
+
         </LinearLayout>
 
     </ScrollView>
