--- a/app/src/main/res/layout/item_schedule.xml
+++ b/app/src/main/res/layout/item_schedule.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="2dp"
     android:paddingHorizontal="4dp"
+    android:background="@color/transparent"
     android:orientation="horizontal">
 
     <TextView
