--- a/app/src/main/res/layout/activity_insert_table.xml
+++ b/app/src/main/res/layout/activity_insert_table.xml
@@ -42,6 +42,19 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="저장하기" />
+
+            </LinearLayout>
+
 
             <!--            <include-->
             <!--                android:id="@+id/grade_filter"-->
