--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
 <domain-config cleartextTrafficPermitted="true">
     <domain includeSubdomains="true">ec2-3-35-210-224.ap-northeast-2.compute.amazonaws.com</domain>
+    <domain includeSubdomains="true">1mhomedance-api-20f8820449d30e5e.elb.ap-northeast-2.amazonaws.com</domain>
 </domain-config>
 </network-security-config>
